# rules_fips

./: .bazelrc  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.boringssl  MODULE.bazel  NOTICE  README.md  SECURITY.md  SUPPORT.md  go.mod
.bcr/: metadata.template.json  presubmit.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  publish-bcr.yml  release.yml  scorecard.yml  trivy.yml
compat/boringssl/: BUILD.bazel
compat/boringssl/openssl/: bn.h  cmac.h  crypto.h  ec.h  evp.h  modes.h  opensslconf.h  rsa.h
docs/: README.md  architecture.md  fips-model.md  maintenance.md  portability.md  publishing.md  versions.md
docs/agents/: README.md
e2e/bcr/: BUILD.bazel  MODULE.bazel  smoke.bzl
e2e/bcr/pkgconfig-sdk/usr/lib/pkgconfig/: external.pc
examples/: BUILD.bazel
fips/: BUILD.bazel  compiler_rt.bzl  crypto.bzl  crypto_sdk.bzl  deb.bzl  defs.bzl  elixir.bzl  extensions.bzl  foreign_crypto.bzl  foreign_otp.bzl  launcher.bzl  libcxx.bzl  metadata.bzl  musl.bzl  ninja.bzl  package.bzl  pkg_config.bzl  providers.bzl  repositories.bzl  runtime.bzl  rust_adapter.bzl  source_versions.bzl  sysroot.bzl  toolbox.bzl  ubi.bzl  ubi10_amd64.lock.json  ubi10_arm64.lock.json  ubi10_repositories.yaml  ubi_repositories.bzl  versions.bzl
fips/private/: BUILD.bazel  busybox.BUILD.bazel  compiler_rt.BUILD.bazel  configure_header.bzl  libcxxabi.BUILD.bazel  linux_headers.BUILD.bazel  llvm_project.BUILD.bazel  make.BUILD.bazel  ninja.BUILD.bazel  pkgconf.BUILD.bazel  ssp_local.c  tooling.bzl
fips/toolchains/: BUILD.bazel  cc_toolchain.bzl  clang_runtime.bzl  compiler_runtime.bzl  defs.bzl  runtime_tool.bzl
runtime/: BUILD.bazel  boring_fips_check.c  elixir  elixir-boringssl  fips_boot.erl  fips_boot_boringssl.erl  openssl-fips.cnf
scripts/: build-boringssl.sh  build.sh  container-boringssl.sh  container-elixir-boringssl.sh  container-elixir.sh  container-openssl.sh  container-otp-boringssl.sh  container-otp.sh  hermetic-bazel.sh  verify-boringssl.sh  verify.sh
test/pkgconfig/: BUILD.bazel  pkg_config_check.bzl
test/pkgconfig/sdk/lib/pkgconfig/: fontconfig.pc
test/toolchain/: BUILD.bazel  build.rs  consumer_macro.rs  main.c  main.cc  main.rs  native.c  run_binary_test.bzl  static_runtime_test.rs
test/toolchain/cmake/: CMakeLists.txt  native.c
tools/buildifier/: BUILD.bazel
tools/crypto_activation/: main.go  main_test.go
tools/deb_ar_extract/: main.go
tools/fips_artifact_validator/: main.go  main_test.go
tools/fips_launcher/: main.go  main_test.go
tools/foreign_build_driver/: main.go  main_test.go
tools/hermetic_bash/: main.go
tools/hermetic_busybox/: BUILD.bazel  main.go
tools/hermetic_exec/: main.go  main_test.go
tools/hermetic_make/: main.go
tools/hermetic_musl_tool/: main.go  main_test.go
tools/otp_bootstrap_exec/: main.go
tools/perl_runtime/: BUILD.bazel  RulesFipsHermeticPerl.pm
tools/runtime_launcher/: BUILD.bazel  main.go  main_test.go
tools/runtime_packager/: BUILD.bazel  main.go  main_test.go
