module(
    name = "rules_fips",
    version = "0.0.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_perl", version = "1.1.2")
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)
http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)
http_archive(
    name = "fips_busybox_exec",
    build_file = "//fips/private:busybox.BUILD.bazel",
    sha256 = "b0d6cfc585d7fdd12df359cc5d38d5e45894e9e9e78c4059eb41577d022ec734",
    type = "tar.gz",
    urls = ["https://dl-cdn.alpinelinux.org/alpine/v3.24/main/x86_64/busybox-static-1.37.0-r31.apk"],
)
http_archive(
    name = "fips_make_exec",
    build_file = "//fips/private:make.BUILD.bazel",
    sha256 = "a916626a876f64c6b6fb32a6bf0fa93351d09fae0aa7684135642390da647e60",
    type = "tar.gz",
    urls = ["https://dl-cdn.alpinelinux.org/alpine/v3.24/main/x86_64/make-4.4.1-r4.apk"],
)
http_file(
    name = "compiler_rt_22_1_3_license",
    downloaded_file_path = "compiler-rt-22.1.3-LICENSE.txt",
    sha256 = "1a8f1058753f1ba890de984e48f0242a3a5c29a6a8f2ed9fd813f36985387e8d",
    urls = ["https://raw.githubusercontent.com/llvm/llvm-project/llvmorg-22.1.3/compiler-rt/LICENSE.TXT"],
)
http_file(
    name = "llvm_libicu_amd64_deb",
    downloaded_file_path = "libicu70_70.1-2_amd64.deb",
    sha256 = "58a154f6307289813da2276f900498ef536ae7c0522d2cf31a3c3c5cf62dfd9a",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/i/icu/libicu70_70.1-2_amd64.deb"],
)
http_file(
    name = "llvm_libxml2_amd64_deb",
    downloaded_file_path = "libxml2_2.9.13+dfsg-1ubuntu0.12_amd64.deb",
    sha256 = "b3678e6e4b166bc0e4226fb118d489ab51802c772914421397c9dcb2dd0e0d2b",
    urls = ["https://cl.archive.ubuntu.com/ubuntu/pool/main/libx/libxml2/libxml2_2.9.13+dfsg-1ubuntu0.12_amd64.deb"],
)
http_archive(
    name = "ninja_1_11_1_src",
    build_file = "//fips/private:ninja.BUILD.bazel",
    sha256 = "31747ae633213f1eda3842686f83c2aa1412e0f5691d1c14dbbcc67fe7400cea",
    strip_prefix = "ninja-1.11.1",
    urls = ["https://github.com/ninja-build/ninja/archive/refs/tags/v1.11.1.tar.gz"],
)

clang_archive = use_repo_rule(
    "@toolchains_llvm//toolchain:sysroot.bzl",
    "sysroot",
)
clang_archive(
    name = "fips_clang_amd64",
    include_patterns = [
        "*/bin/clang",
        "*/bin/clang++",
        "*/bin/clang-22",
        "*/bin/ld.lld",
        "*/bin/lld",
        "*/bin/llvm-ar",
        "*/bin/llvm-nm",
        "*/bin/llvm-objcopy",
        "*/bin/llvm-objdump",
        "*/bin/llvm-ranlib",
        "*/bin/llvm-readelf",
        "*/bin/llvm-readobj",
        "*/bin/llvm-strip",
        "*/lib/clang/22/**",
    ],
    sha256 = "c5ac8ef89ca39d30cb32e9b83772f995dd891c685ebc188d593c943a64d5f8b5",
    strip_components = 1,
    urls = ["https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.6/LLVM-22.1.6-Linux-X64.tar.xz"],
)
clang_archive(
    name = "fips_cmake_amd64",
    include_patterns = ["**"],
    sha256 = "186c53121cf6ef4e48b51e88690e6ef84f268611064a42e5a2e829c3d6b2efde",
    strip_components = 1,
    urls = ["https://github.com/Kitware/CMake/releases/download/v3.27.4/cmake-3.27.4-linux-x86_64.tar.gz"],
)
clang_archive(
    name = "fips_go_amd64",
    include_patterns = ["**"],
    sha256 = "b3075ae1ce5dab85f89bc7905d1632de23ca196bd8336afd93fa97434cfa55ae",
    strip_components = 1,
    urls = ["https://go.dev/dl/go1.21.1.linux-amd64.tar.gz"],
)

foreign_tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    foreign_tools,
    "rules_foreign_cc_framework_toolchains",
)

fips_sources = use_extension("//fips:extensions.bzl", "fips_sources")
use_repo(
    fips_sources,
    "boringssl_src",
    "elixir_src",
    "linux_amd64_sysroot",
    "musl_amd64_sysroot",
    "musl_arm64_sysroot",
    "musl_src",
    "openssl_core_src",
    "openssl_fips_src",
    "otp_src",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "//fips/toolchains:foreign_autoconf_toolchain",
    "//fips/toolchains:foreign_automake_toolchain",
    "//fips/toolchains:foreign_cmake_toolchain",
    "//fips/toolchains:foreign_m4_toolchain",
    "//fips/toolchains:foreign_make_toolchain",
    "//fips/toolchains:foreign_ninja_toolchain",
    "//fips/toolchains:foreign_pkgconfig_toolchain",
    "//fips/toolchains:foreign_cc_amd64_toolchain",
    "//fips/toolchains:foreign_cc_arm64_toolchain",
    "//fips/toolchains:linux_amd64_toolchain",
    "//fips/toolchains:linux_arm64_cross_toolchain",
)
