module(
    name = "rules_fips",
    version = "0.1.0",
    bazel_compatibility = [">=9.2.0"],
)

bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.3", dev_dependency = True)

bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.22")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_perl", version = "1.1.2")
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

http_archive(
    name = "fips_busybox_exec",
    build_file = "//fips/private:busybox.BUILD.bazel",
    sha256 = "b0d6cfc585d7fdd12df359cc5d38d5e45894e9e9e78c4059eb41577d022ec734",
    type = "tar.gz",
    urls = ["https://dl-cdn.alpinelinux.org/alpine/v3.24/main/x86_64/busybox-static-1.37.0-r31.apk"],
)

http_archive(
    name = "fips_make_exec",
    build_file = "//fips/private:make.BUILD.bazel",
    sha256 = "a916626a876f64c6b6fb32a6bf0fa93351d09fae0aa7684135642390da647e60",
    type = "tar.gz",
    urls = ["https://dl-cdn.alpinelinux.org/alpine/v3.24/main/x86_64/make-4.4.1-r4.apk"],
)

http_file(
    name = "compiler_rt_22_1_3_license",
    downloaded_file_path = "compiler-rt-22.1.3-LICENSE.txt",
    sha256 = "1a8f1058753f1ba890de984e48f0242a3a5c29a6a8f2ed9fd813f36985387e8d",
    urls = ["https://raw.githubusercontent.com/llvm/llvm-project/llvmorg-22.1.3/compiler-rt/LICENSE.TXT"],
)

http_file(
    name = "go_1_26_5_license",
    downloaded_file_path = "go-1.26.5-LICENSE.txt",
    sha256 = "911f8f5782931320f5b8d1160a76365b83aea6447ee6c04fa6d5591467db9dad",
    urls = ["https://raw.githubusercontent.com/golang/go/go1.26.5/LICENSE"],
)

filtered_archive = use_repo_rule(
    "@toolchains_llvm//toolchain:sysroot.bzl",
    "sysroot",
)

filtered_archive(
    name = "fips_go_amd64",
    include_patterns = ["**"],
    sha256 = "5c2c3b16caefa1d968a94c1daca04a7ca301a496d9b086e17ad77bb81393f053",
    strip_components = 1,
    urls = ["https://go.dev/dl/go1.26.5.linux-amd64.tar.gz"],
)

foreign_tools = use_extension("@rules_foreign_cc//foreign_cc:extensions.bzl", "tools")
use_repo(
    foreign_tools,
    "rules_foreign_cc_framework_toolchains",
)

fips_sources = use_extension("//fips:extensions.bzl", "fips_sources")
use_repo(
    fips_sources,
    "elixir_src",
    "fips_llvm_musl_amd64",
    "fips_qemu_aarch64",
    "musl_amd64_sysroot",
    "musl_arm64_sysroot",
    "musl_src",
    "openssl_core_src",
    "openssl_fips_src",
    "otp_src",
)

register_toolchains(
    "@rules_foreign_cc_framework_toolchains//:all",
    "//fips/toolchains:foreign_autoconf_toolchain",
    "//fips/toolchains:foreign_automake_toolchain",
    "//fips/toolchains:foreign_m4_toolchain",
    "//fips/toolchains:foreign_make_toolchain",
    "//fips/toolchains:foreign_pkgconfig_toolchain",
    "//fips/toolchains:foreign_cc_amd64_toolchain",
    "//fips/toolchains:foreign_cc_arm64_toolchain",
    "//fips/toolchains:linux_amd64_toolchain",
    "//fips/toolchains:linux_arm64_cross_toolchain",
)
