load(":metadata.bzl", "source_pin_manifest")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

source_pin_manifest(name = "source_pins")

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "metadata.bzl",
    "ninja.bzl",
    "providers.bzl",
    "toolbox.bzl",
])
