load(":metadata.bzl", "source_pin_manifest")

package(default_visibility = ["//visibility:public"])

toolchain_type(name = "toolchain_type")

source_pin_manifest(name = "source_pins")

exports_files([
    "defs.bzl",
    "extensions.bzl",
    "metadata.bzl",
    "providers.bzl",
    "repositories.bzl",
    "rust_adapter.bzl",
    "toolbox.bzl",
    "versions.bzl",
])
