load("//fips:toolbox.bzl", "host_go_tool")

package(default_visibility = ["//fips:__subpackages__"])

exports_files([
    "busybox.BUILD.bazel",
    "make.BUILD.bazel",
])

host_go_tool(
    name = "fips_artifact_validator",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    source = "//tools/fips_artifact_validator:main.go",
    visibility = ["//visibility:public"],
)
