package(default_visibility = ["//visibility:public"])

filegroup(
    name = "runtimes_srcs",
    srcs = glob([
        "cmake/**",
        "libcxx/**",
        "libcxxabi/**",
        "libunwind/**",
        "llvm/cmake/**",
        "llvm/include/**",
        "runtimes/**",
    ]),
)

exports_files(["llvm/CMakeLists.txt"])
